src/client/app/states/admin/alerts/list/_list.sass
+block(admin-alerts-list)

  +element(body)
    padding-right: 395px

  +element(aside)
    text-align: right
    height: 90px
    position: absolute
    right: 0
    top: 0

+block(alerts-table)
  @extend .table-striped
  width: 100%
  background-color: $app-color-white

  +element(heading)
    height: 44px
    font-weight: bold
    text-transform: uppercase
    color: $app-color-gray

    +modifier(status)
      text-align: left

    +modifier(start-date)
      text-align: left

    +modifier(end-date)
      text-align: left

    +modifier(sortable)
      color: $app-color-blue
      cursor: pointer

      &.st-sort-ascent::after
        font: normal normal normal 12px/1 FontAwesome
        content: "\f077"
        padding-left: 4px

      &.st-sort-descent::after
        font: normal normal normal 12px/1 FontAwesome
        content: "\f078"
        padding-left: 4px

  +element(cell)
    height: 44px
    font-size: 14px
    border: none
    padding: 10px 10px 10px 0
    vertical-align: top
    position: relative

    +modifier(padding)
      width: 20px

    +modifier(category)
      text-align: left

    +modifier(status)
      width: 136px
      padding-right: 0
      text-align: left
      text-transform: lowercase

    +modifier(message)
      padding-right: 0px
      text-align: left

    +modifier(start-date)
      width: 136px
      padding-right: 0
      text-align: left

    +modifier(end-date)
      width: 136px
      padding-right: 0
      text-align: left

    +modifier(actions)
      width: 196px

  +element(action)
    margin-right: 20px

  +element(empty)
    font-size: 22px
    font-weight: bold
    text-align: center
    padding: 10px

